Update to Laravel 4.0.7

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -33,6 +33,7 @@ AddDefaultCharset utf-8
 # necessary for the following directives to work.
 <IfModule mod_rewrite.c>
     Options +FollowSymlinks
+    Options -MultiViews
     RewriteEngine On
 
     # Rewrite example.com -> www.example.com
@@ -40,6 +41,7 @@ AddDefaultCharset utf-8
     RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 
     # Laravel router
+    RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
